# WideLM

./: MD5  NAMESPACE  README  configure  configure.ac
R/: widelm.R
man/: wideLM.Rd
src/: Makefile.in  miniblas.h  wideLSFitCoproc.cu  wideLSFitCoproc.h  wideLSFitHost.cpp
